--- a/src/main/resources/view/forgot-password-form.fxml
+++ b/src/main/resources/view/forgot-password-form.fxml
@@ -18,7 +18,7 @@
       </ImageView>
       <ImageView fitHeight="70.0" fitWidth="86.0" layoutX="100.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../iChatServer/src/main/resources/assert/iChat-logo.png" />
+            <Image url="@../assert/iChat-logo.png" />
          </image>
       </ImageView>
       <Label layoutX="181.0" layoutY="43.0" prefHeight="44.0" prefWidth="145.0" text="iChat">
